overflowing components fixed

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,6 +1,10 @@
 .App{
+  margin:0;
+  padding:0;
+  top:0;
+  left:0;
   width:100%;
-  height:100%;
+  height:100vh;
   background-color:black;
 }
 
