--- a/src/css/cardItem.css
+++ b/src/css/cardItem.css
@@ -4,6 +4,7 @@
   width:10rem;
   border-radius:5px;
   perspective: 900px;
+  justify-self: center;
 }
 
 .card-inner{
