--- a/src/css/landingPage.css
+++ b/src/css/landingPage.css
@@ -6,12 +6,16 @@
   box-sizing: border-box;
 }
 
+.form-div{
+  padding:30px 0px 30px 0px;
+}
+
 
 .landingPage::before{
   content: '';
   position: absolute;
-  width:100vw;
-  height: 100vh;
+  width:100%;
+  height: 100%;
   background-color: black;
   background-image: url(../assets/KFGYOzq-harry-potter-wallpaper\ \(1\)\ \(1\).jpg);
   background-size: contain;
@@ -21,29 +25,26 @@
 
 .sideDisplay{
   position: relative;
-  width:65vw;
+  margin:0;
+  width:63vw;
   height:100vh;
-  left:35vw;
+  left:37vw;
+  overflow-x: hidden;
 }
 
-.paginate{
-  position: relative;
-  height:9vh;
-  width:auto;
-  left:50%;
-  top:10%;
-  transform: translate(-50%,-50%);
+.paginate-container{
+  padding:30px 0px 30px 0px; 
 }
 
 @media only screen and (max-width: 768px) {
   .sideDisplay{
     position: relative;
-    width:100%;
     left:0;
     top:0;
     height:100%;
-    width:100%;
-    background-color: black;
+    width:100vw;
+    background-color:black;
+    background-image: transparent;
   }
 
   .landingPage::before{
@@ -52,8 +53,7 @@
     height:100%;
     width:100%;
   }
-  .paginate{
-    padding-top:100px;
-    left:53%;
+  .paginate-container{
+    
   }
 }
